# Stellar-K8s

./: .commitlintrc.yaml  .pre-commit-config.yaml  ADVANCED_SYSTEMS_IMPLEMENTATION.md  ADVANCED_SYSTEMS_README.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  Issues.md  LEADER_ELECTION_IMPLEMENTATION.md  Makefile  README.md  TODO.md  build.rs  build_errors.txt  mkdocs.yml  requirements.txt  stellar-k8s
.github/: CI_COMMANDS.md  RELEASE_TEMPLATE.md
.github/workflows/: chaos-tests.yml  ci.yml  commit-lint.yml  docs-deploy.yml  performance-regression.yml  performance.yml  pre-commit.yml  release.yml  soak-test.yml  verify-operator-boot.yml  webhook-benchmark.yml
.kiro/: STATUS_877.md
benchmarks/: README.md  run-proximity-benchmark.sh
benchmarks/k6/: comprehensive-perf.js  traffic-shaping-load-test.js
benchmarks/scripts/: compare_benchmarks.py  generate_report.py
charts/stellar-operator/: UPGRADE_GUIDE.md  values-ha.yaml  values.schema.json  values.yaml
config/crd/: stellarautoscaler-crd.yaml  stellarfederation-crd.yaml  stellarnode-crd.yaml  stellarobservability-crd.yaml  stellarupgrade-crd.yaml
config/samples/: traffic-policy-example.yaml
docs/: README.md  SCHEDULER_PROXIMITY_BENCHMARK.md  api-reference.md  canary-deployments.md  compliance-reporting.md  docker-compose-to-kubernetes-migration.md  dr-failover.md  faq.md  fuzzing.md  horizon-dashboard.md  horizon-query-cache.md  index.md  installation-wsl2.md  kubectl-plugin.md  leader-election.md  log-aggregation-guide.md  multi-cluster.md  network-isolation.md  network-policy-templates.md  network-topology-management.md  peer-discovery.md  performance-optimization-framework.md  performance-tuning.md  pod-disruption-budget.md  production-security-hardening.md  pvc-auto-expansion.md  resource-optimization.md  scalability.md  secret-management-kms.md  sync-state-scaling.md  upgrade-workflow.md
docs/api/: client-libraries.md  error-codes.md  index.md  metrics.md  openapi.yaml  webhook.md
docs/architecture/: diagrams.md  index.md  overview.md  sequence-diagrams.md
docs/configuration/: index.md
docs/contributing/: development-setup.md  index.md
docs/deployment-guides/: horizon.md  index.md  soroban-rpc.md  validator.md
docs/developer-onboarding/: index.md
docs/getting-started/: index.md  installation.md  prerequisites.md  quick-start.md
docs/kubectl-plugin/: INTERACTIVE_MODE_GUIDE.md
docs/log-dashboards/: grafana-loki-dashboard.json  kibana-filebeat-dashboard.json
docs/metrics/: STELLAR_METRICS_GUIDE.md
docs/monitoring/: GRAFANA_DASHBOARD_GUIDE.md
docs/operations/: incident-response.md  index.md
docs/troubleshooting/: common-issues.md  index.md  networking.md
docs/tutorials/: deploy-testnet-validator.md  index.md
examples/: custom-probes.yaml  external-dns-example.yaml  gitops-upgrade.yaml  horizon-canary-example.yaml  hpa-cpu-based.yaml  hpa-custom-metrics.yaml  hpa-memory-based.yaml  ingress-example.yaml  init-containers-config-generation.yaml  init-containers-data-seeding.yaml  init-containers-db-migration.yaml  latency-scheduling.yaml  priority-class.yaml  resourcequota-namespace.yaml  security-context-baseline.yaml  security-context-privileged.yaml  security-context-restricted.yaml  sidecar-example.yaml  validator-sync-scaling.yaml
monitoring/: grafana-horizon-dashboard.json  grafana-horizon.json  grafana-observability.json  grafana-operator-health-dashboard.json  grafana-soroban-rpc-dashboard.json  grafana-validator-dashboard.json  observability-alerts.yaml  traffic-dashboard.json
scripts/: compose_to_stellark8s.py  create_batch_10_issues.sh  create_batch_11_issues.sh  create_batch_12_issues.sh  create_batch_13_issues.sh  create_batch_14_issues.sh  create_batch_15_issues.sh  create_batch_16_issues.sh  create_batch_17_issues.sh  create_batch_18_issues.sh  create_batch_19_issues.sh  create_batch_2_issues.sh  create_batch_3_issues.sh  create_batch_4_issues.sh  create_batch_5_issues.sh  create_batch_6_issues.sh  create_batch_7_issues.sh  create_batch_8_issues.sh  create_batch_9_issues.sh  create_labels.sh  create_wave_issues.sh  run_batches.sh  update_wave_issues.sh
src/: audit_report.rs  canary_deployment.rs  cli.rs  cli_tests.rs  consensus_monitoring.rs  deployment_strategy.rs  kubectl_plugin.rs  lib.rs  load_balancer.rs  load_modeling.rs  main.rs  message_queue.rs  plugin_sdk.rs  preflight.rs  runbook.rs  schema_registry.rs  sidecar.rs  update_check.rs  websocket_streaming.rs
src/api_gateway/: analytics.rs  auth.rs  config.rs  mod.rs  router.rs  server.rs  transform.rs  versioning.rs
src/backup/: secret_rotation.rs
src/byzantine/: aggregator.rs  watcher.rs
src/caching/: cache.rs  distributed.rs  invalidation.rs  metrics.rs  mod.rs  warming.rs
src/capacity_planning/: analysis.rs  forecasting.rs  metrics.rs  mod.rs  recommendation.rs
src/carbon_aware/: scheduler.rs
src/chaos/: analytics.rs  fault_injection.rs  mod.rs  scheduler.rs
src/commands/: backup.rs  doctor.rs  export_compliance.rs  mod.rs  operator.rs
src/compliance/: audit_trail.rs  dashboard.rs  evidence.rs  export.rs  frameworks.rs  mod.rs  monitor.rs  opa.rs  policy_engine.rs  policy_test.rs  policy_version.rs  report.rs  soc2_iso.rs
src/config_mgmt/: drift.rs  impact.rs  mod.rs  rollback.rs  validation.rs  versioning.rs
src/controller/: anomaly_detection.rs  archive_health.rs  archive_prune.rs  audit_log.rs  audit_recorder.rs  audit_sink.rs  background_jobs.rs  blue_green.rs  captive_core.rs  chaos_engineering.rs  compliance_export.rs  cost.rs  cross_cloud_failover.rs  cross_cluster.rs  cross_region_sync.rs  db_pool.rs  dr.rs  dr_drill.rs  dr_test.rs  finalizers.rs  gitops_upgrade.rs  health_check_sidecar.rs  horizon_metrics_collector.rs  label_propagation.rs  metrics.rs  ml_pipeline.rs  (+33 more)
tests/: e2e_kind.rs  health_check_probes_e2e.rs  health_check_sidecar_integration.rs  hpa_scaling_e2e.rs  init_containers_test.rs  json_logging_test.rs  leader_election_test.rs  reconciler_fuzz.rs  secret_rotation_test.rs  service_mesh_e2e_test.rs
(+245 files in other folders)
