[package]
name = "stellar-k8s"
version = "0.1.0"
edition = "2021"
authors = ["Stellar K8s Contributors"]
description = "Cloud-Native Kubernetes Operator for Stellar Infrastructure"
license = "Apache-2.0"
repository = "https://github.com/stellar/stellar-k8s"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
lru = "0.16"
printpdf = "0.7"
toml = "0.5"
# Glob pattern matching for label propagation filters
glob = "0.3"

# Kubernetes client and operator framework
kube = { version = "0.94", features = ["runtime", "derive", "unstable-runtime", "admission", "client", "ws"] }
kube-runtime = { version = "0.94", features = ["unstable-runtime"] }
k8s-openapi = { version = "0.26", default-features = false, features = [
    "v1_30",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# JWT support
jsonwebtoken = "9"

# Regex for routing
regex = "1"

# HTTP types
http = "1"

# Schema generation for CRDs
schemars = { version = "0.8", features = ["chrono"] }

# Hyper for body operations
hyper = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.6"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Pinned to fix RUSTSEC-2026-0009 (stack exhaustion DoS); also used transitively
# by rcgen/yasna/x509-parser.
time = { version = "0.3.47", optional = true }
# Pinned to fix RUSTSEC-2026-0007; used transitively by many HTTP/async crates.
bytes = { version = "1.11.1", optional = true }

# Zip compression for incident reports
zip = "2"

# Hostname for leader election
hostname = "0.4"

# Regex for log scrubbing patterns
regex = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-opentelemetry = "0.22"

# OpenTelemetry for distributed tracing
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.14", features = [
    "grpc-tonic",
    "http-proto",
] }

# HTTP client for health checks
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls-manual-roots",
    "native-tls",
    "multipart",
] }
rdkafka = { version = "0.36", optional = true, features = ["cmake-build", "ssl", "sasl"] }
async-nats = { version = "0.35", optional = true }
# Vendored libsasl2 so CI/dev builds succeed without system libsasl2-dev.
sasl2-sys = { version = "0.1.22", features = ["vendored"] }

# REST API (optional)
axum = { version = "0.7.5", optional = true, features = ["ws"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["trace"], optional = true }

# Metrics
prometheus-client = { version = "0.22", optional = true }
once_cell = { version = "1", optional = true }

# TLS and certificate generation
rustls = "0.23"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
axum-server = { version = "0.7.0", features = ["tls-rustls"] }
rustls-pki-types = "1.14.1"
x509-parser = "0.16"

# Wasm runtime for custom validation plugins
wasmtime = { version = "24.0.7", optional = true }
wasmtime-wasi = { version = "24.0.7", features = ["preview1"], optional = true }

# Additional crypto for webhook TLS
tokio-rustls = { version = "0.26", optional = true }

# Base64 for Wasm plugin loading
base64 = "0.21"

# HMAC-SHA256 for webhook payload signing
hmac = "0.12"

# SHA256 for plugin integrity verification
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_distr = "0.5.1"

# Backup scheduler dependencies
cron = "0.15"
flate2 = "1"
async-trait = "0.1"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "chrono",
] }
pqcrypto-dilithium = "0.5.0"
pqcrypto-kyber = "0.8.1"
pqcrypto-traits = "0.3.5"
comfy-table = "7.2.2"
csv = "1.4.0"
url = "2.5"
urlencoding = "2.1"
aws-sdk-s3 = "1.132.0"
aws-config = "1.8.17"
serde_json_diff = "0.2.0"
json-patch = "4.2.0"
md5 = "0.8.0"

[build-dependencies]
chrono = "0.4"
serde_json = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }

[features]
default = ["rest-api", "metrics", "admission-webhook", "k8s-v1-30"]
rest-api = ["axum", "tower", "tower-http"]
metrics = ["prometheus-client", "once_cell"]
kafka = ["dep:rdkafka"]
nats = ["dep:async-nats"]
admission-webhook = [
    "wasmtime",
    "wasmtime-wasi",
    "tokio-rustls",
    "axum",
    "tower",
    "tower-http",
]
axum = ["dep:axum"]
# Expose reconciler for state-machine fuzzing (reconcile_no_panic, event sequences)
reconciler-fuzz = []

# Kubernetes API version selection (exactly one must be enabled)
k8s-v1-30 = ["k8s-openapi/v1_30"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
wiremock = "=0.6.5"
proptest = "1.5"
wat = "1.251"
# Ensure dev builds that pull k8s-openapi 0.22 have an explicit API version feature.
k8s-openapi = { version = "0.26", default-features = false, features = ["v1_30"] }

[[bin]]
name = "stellar-operator"
path = "src/main.rs"

[[bin]]
name = "stellar-sidecar"
path = "src/sidecar.rs"

[[bin]]
name = "kubectl-stellar"
path = "src/kubectl_plugin.rs"

[[bin]]
name = "stellar-completions"
path = "src/bin/completions.rs"

# Byzantine Monitoring Watcher — deployed as a sidecar in multiple cloud regions
# to detect local vs. global consensus issues (Byzantine partition detection).
[[bin]]
name = "stellar-watcher"
path = "src/bin/stellar-watcher.rs"
required-features = ["rest-api", "metrics"]

# Fork Detection Sidecar — compares local ledger hash against public anchors
# to detect potential network forks early.
[[bin]]
name = "stellar-fork-detector"
path = "src/bin/stellar-fork-detector.rs"
required-features = ["rest-api", "metrics"]

# Health Check Sidecar — provides advanced liveness/readiness probes
# that query Stellar Core API instead of just checking process status
[[bin]]
name = "stellar-health-sidecar"
path = "src/bin/stellar-health-sidecar.rs"
required-features = ["rest-api"]

[workspace]
